# zy_socks

./: CMakeLists.txt  README.md  client.proto  config.json  config_json.cc  config_json.h  server.proto
client/: CMakeLists.txt  client_main.cc  local_server.cc  local_server.h  packet.h  send_thread_pool.cc  send_thread_pool.h  tunnel.cc  tunnel.h
server/: CMakeLists.txt  Resolver.cc  Resolver.h  server_main.cc  socks_server.cc  socks_server.h  tunnel.cc  tunnel.h
